--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Vidaloka&display=swap" rel="stylesheet">
 
-  <title>React App</title>
+  <title>Bikash Kumar Paul</title>
 </head>
 
 <body>
